--- a/app/templates/public/services/services.html
+++ b/app/templates/public/services/services.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row justify-content-center align-items-center row-gap-4 py-5">
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.system_data') }}">Data Sistem</a>
@@ -44,7 +44,7 @@
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a>
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a>
@@ -72,7 +72,7 @@
     </div>
     <div class="row justify-content-start align-items-center row-gap-4 py-5">
       <div class="col-lg-4 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="col-lg-4 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a>
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="col-lg-4 d-flex align-self-stretch">
-        <div class="card hover-upwards shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3" style="width: 100% !important">
           <div class="card-body p-4">
             <div class="d-flex flex-column row-gap-2">
               <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a>
